# mediapepe-example

./: download_images.py  pyproject.toml  raspberry.py  tutorial.py
