[tool.poetry]
name = "opencv"
version = "0.1.0"
description = ""
authors = ["johnkdo2020 <johnkdo2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cvzone = "^1.6.1"
opencv-python = "^4.9.0.80"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
